# CalcProject

./: CMakeLists.txt  local_tester.sh
0_Common/include/: common.h
0_Common/src/: s_calc.c
1_SimpleCalc/: CMakeLists.txt
1_SimpleCalc/src/: simplecalc.c
2_FileCalc/: CMakeLists.txt  filecalc
2_FileCalc/src/: filecalc.c
3_DataStructures1/include/: linked_list.h
3_DataStructures1/src/: hash_table.c  linked_list.c  queue.c  queue_p.c  stack.c
3_DataStructures1/tests/: hash_table_tests.c  linked_list_tests.c  queue_p_tests.c  queue_tests.c  stack_tests.c  test_hash  test_list  test_queue  test_queue_p  test_stack
4_ThreadCalc/: CMakeLists.txt  threadcalc
4_ThreadCalc/include/: equation.h  threadpool.h
4_ThreadCalc/src/: f_calc.c  s_calc.c  threadcalc.c  threadpool.c
5_NetCalc/: netcalc  server
5_NetCalc/client/: client.py
5_NetCalc/include/: common.h
5_NetCalc/src/: server.c  threadcalc.c
Tests/: FileCalcTests.py  ThreadCalcTests.py
